# audio_parse

./: README.md
audio_parse/: .gitignore  README.md  README_EN.md  settings.gradle.kts
audio_parse/app/: build.gradle.kts
audio_parse/app/src/androidTest/java/com/uai/audio_parse/: ExampleInstrumentedTest.java
audio_parse/app/src/main/: AndroidManifest.xml
audio_parse/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
audio_parse/app/src/main/java/com/uai/audio_parse/: AudioExtractor.java  LLMClient.java  MainActivity.java  ModelDownloadService.java  ModelDownloader.java  PreferencesManager.java  SettingsActivity.java  SpeechRecognizer.java  TranscriptionHistoryManager.java  WhisperRecognizer.java
audio_parse/app/src/main/res/: memory.md  plan.md
audio_parse/app/src/main/res/drawable/: ic_check.xml  ic_launcher_foreground.xml
audio_parse/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  dialog_app_intro.xml  dialog_history.xml  item_history.xml
audio_parse/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
audio_parse/app/src/main/res/values-night/: themes.xml
audio_parse/app/src/test/java/com/uai/audio_parse/: ExampleUnitTest.java
audio_parse/docs/: WHISPER_NDK_BUILD.md
audio_parse/gradle/: libs.versions.toml
audio_parse/gradle/wrapper/: gradle-wrapper.properties
audio_parse/scripts/: download_whisper.sh
